--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -28,6 +28,13 @@
   date = {2018-02-13},
 }
 
+@software{Wiedzmin3,
+  author = {{CD Projekt RED}},
+  title = {Wiedzmin 3: Dziki Gon},
+  url = {https://www.thewitcher.com/witcher3/},
+  date = {2015-05-18},
+}
+
 
 @article{AustralopithecusWeapon,
   author          = {Minkoff, Eli C.},
@@ -104,4 +111,10 @@
   volume          = {5},
   year            = {2017},
   url             = {https://bop.unibe.ch/apd/article/view/6863},
+}
+
+@booklet{SapkowskiZaklinac,
+  author       = {Sapkowski, Andrzej},
+  title        = {Zaklínač},
+  url          = {http://www.andrzejsapkowski.pl/saga.html},
 }
