--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -121,30 +121,109 @@ Zaklínač 3 \cite{Wiedzmin3} je akční \acs{RPG} hra, která byla vydána r. 2
 
 Hráč se zde ujímá role Geralta z Rivie - zaklínače, profesionálního lovce monster. Ten je kromě svých dvou mečů\footnote{stříbrného pro boj s nestvůrami a železného proti lidem} vybaven flexibilními možnostmi pohybu, jednoduchými kouzly (tzv. zaklínačská znamení) a širokou škálou ručně vařených lektvarů. Na své cestě bojuje s lidmi, upíry, bazilišky i nepředstavitelnými monstry z nočních můr
 
+- musí být schopen bojovat proti humanoidům i libovolně obrovským a pitvorným monstrům
+- z nějakého důvodu tu je blokování mečem, i když má smysl jenom proti lidem, na monstra neplatí
+- kuš dává zanedbatelný dmg ale srazí letícího protivníka na zem kde ho po určitý čas lze dorazit
+- silný X rychlý úder - faktor časování (ofc. je tu taky průraznost zbroje apod.)
+- jak se vlastnosti úderů meče mění v závislosti na skill-tree progressu
+- znamení čerpají výdrž, pohyb inhibuje regeneraci výdrže
+- toxicita - omezení kolik lektvarů může být použito během 1 boje
+- lektvary, oleje apod. - dlouhodobé plánování
 
 
 \subsection{Chladná zbraň jako doplňkový prvek}
 
+- najdeme v mnoha fps, stealth apod. hrách (průkopník motorovka v DOOMovi 1993)
+- často je to demonstrace basic klik->útok varianty z 1.2.1(př. Half-Life, Borderlands, Dishonored (tam jsou prvky blokování a časování, trefování komponent clockwork soldiera - actually celkem propracovaná mechanika ale pořád to není stěžejní mechanika v porovnání se stealthem, střelné zbraně jsou s ní alespoň na rovinu (záleží PlayYourWay))), občas doplněná jedním dvěma prvky pro prohloubení, ale může to být i něco extra specielního (př. motorovka v DOOM Eternal)
 
 
 \section{Hry s větší kontrolou}
 
+(proč by hráč měl chtít větší kontrolu)
+- je to poučné o reálném světě
+- baví ho dělat blbosti, prostě chce mít kontrolu 
+- (může mít trauma ze hry kde postava udělala blbost co nechtěl)?
+- baví ho šermovat IRL
+
+(proč by vývojář měl chtít větší kontrolu pro hráče)
+- emergentní herní mechaniky
+- interakce s env., velmi diegetické GUI
+
+(Problémy co je při tom potřeba vyřešit)
+- narativní disonance (pc má být zkušený šermíř)
+- hratelnost (telegrafování nepřátelských úderů apod.)
+- podchycení edge casů
+- (hráči jsou zvyklí na click->action z FPS)?
+- kompromisní ovládání s myší+klávesnicí/ovladačem
+
+
 \subsection{Die by the Sword}
+
+(stručné představení hry)
+
+(popis bojového systému)
+
+(jaké výhody z tohoto plynou)
+
+(jaké výhody se nepodařilo získat)
+
 
 \subsection{Mount\&Blade}
 
+(stručné představení hry)
+
+(popis bojového systému)
+
+(jaké výhody z tohoto plynou)
+
+(jaké výhody se nepodařilo získat)
+
 \subsection{Kingdom Come: Deliverance}
 
+(stručné představení hry)
 
+(popis bojového systému)
+
+(jaké výhody z tohoto plynou)
+
+(jaké výhody se nepodařilo získat)
 
 
 \section{Alternativní ovladače}
 
+(představení - ovladače co mohou být pro náš účel ovládání meče víc vhodné - existují ovladače co se postupně dostávají do mainstreamu, co jsou state-of-the art ve svém obskurním niche oboru, i naprosto experimentální ovladače co jsou teprve předmětem výzkumu)
+
 \subsection{Virtuální realita}
+
+(jaké má výhody)
+
+(příklad hry kde se s ním ovládá meč) (swords&sorcery, gorn, beatsaber)
+
+(nevýhody)
+- disonance "meč narazil do něčeho a není tam kde ovladač"
+
+(proč se jí nebudeme pro výzkumu zabývat)
+- pořád není mainstream
+- (zjistit) uzavřenost platforem?
+
 
 \subsection{Pohybové senzory ve smartphonu}
 
+(výhody)
+- dostupnost
+- otevřenost platformy, programátorská flexibilita (hackovatelnost)
+
+(nevýhody)
+- fragmentace mobilního trhu, nekonzistence výstupu senzorů mezi různými mobily
+- způsob připojení (ne každej desktop má bluetooth nebo wifi, kabel je nepraktickej; celkově mobily asi maj problém s nízkolatenčním přenosem po místní síti)
+- najít nějakej článek
+
 \subsection{Obskurní periferie}
+
+3d myš
+- extrémně drahá 
+- stavěná pro 3d modelováni
+- nemá 6 ale jenom 3 stupně volnosti
 
 
 \section{Shrnutí}
