refactor, added lots of notes for chapter 2 structure

--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -1,13 +1,13 @@
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
 
-Boj nablízko s chladnou zbraní najdeme v mnoha videohrách. Mezi žánry, které se na něj zaměřují, patří akční adventury, RPG\footnote{\ac{RPG}} a hack-n-slash. Důležitý koncept to je i pro žánr válečných strategických her, doplňující roli pak mívá například v FPS\footnote{\ac{FPS}} nebo stealth hrách. Zkrátka, pokud hra ztvárňuje nějaký konflikt řešený násilnou cestou, s vysokou pravděpodobností v ní nějaká chladná zbraň figuruje, ať už jde o světelný meč, středověký řemdih, či židli v hospodské rvačce.
+Boj nablízko s chladnou zbraní najdeme v mnoha videohrách. Mezi žánry, které se na něj zaměřují, patří akční adventury, RPG\footnote{\Acl{RPG}} a hack-n-slash. Důležitý koncept to je i pro žánr válečných strategických her, doplňující roli pak mívá například v FPS\footnote{\Acl{FPS}} nebo stealth hrách. Zkrátka, pokud hra ztvárňuje nějaký konflikt řešený násilnou cestou, s vysokou pravděpodobností v ní nějaká chladná zbraň figuruje, ať už jde o světelný meč, středověký řemdih, či židli v hospodské rvačce.
 
 Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry videoher prošly složitou evolucí a přirozeně každý žánr je adaptuje osobitým způsobem, aby ladily s jeho dalšími specifiky. I tak je ale překvapivě jednoduché popsat určité vlastnosti, které vykrystalizovaly jako společné jádro, jež většinová část her sdílí.
 
 Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto prostoduché rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\cite{DieByTheSword}, \cite{MountAndBlade}, \cite{KCD}) - podrobněji je rozebereme v první kapitole. Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
   
-Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání. Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru se třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, zanedbání jakéhokoliv z nich přinese netriviální důsledky. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména ovladače pro VR\footnote{\ac{VR} - viz kapitolu 1.4.1}), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly (blíže je představíme v kapitole 1). Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
+Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání. Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru se třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, zanedbání jakéhokoliv z nich přinese netriviální důsledky. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména ovladače pro VR\footnote{\Acl{VR} - viz kapitolu 1.4.1}), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly (blíže je představíme v kapitole 1). Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
 
 Jakmile by se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad zbraní, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě ne všechny úkony, o které se pokusí, budou mezi těmi, se kterými autor při vytváření hry počítal. Jak zaručíme, že i v takové situaci bude chování hry odpovídat hráčovu očekávání?\footnote{Pomyslete jaké zklamání a pocit zrady musí cítit hráč, který se jen nevinně pokusil podrbat mečem na zádech, načež jeho postava bez varování vystřelila kilometr do oblak a svou smrtí smazala hodinu neuloženého postupu} Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci zbraně. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles, jež na moderním hardwaru nemají problém zpracovávat v reálném čase stovky objektů. Zahrnutím meče do fyzikální simulace můžeme ušetřit díl práce, která by jinak musela být implementována ručně, a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které již hráči je povědomé z reálného světa, což mu může být nápomocné k rychlému intuitivnímu uchopení systému. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik.\footnote{Příklady po krátkém zamyšlení: odrážení střel, srážení hledí protivníkovy helmy, odpalování předmětů na protivníka, páčení víka truhlice, imerzivní tlačítka stisknutelná úderem meče}
 
