chapter 3 - add some notes

--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -1,5 +1,16 @@
 \chapter{Návrh}
 
+\subsection{Jaké jsme si dali cíle}
+
+(neodsžitelným ideálem, ke kterému se snažíme směřovat, je dokonalé zachycení zážitku, co šerm poskytuje v reálném světě)
+
+(meč by se měl chovat fyzikálně věrně)
+
+(z pohledu backendu by meč měl zvládat plně volný pohyb na všech 6 stupních volnosti)
+
+(frontend - ovládání pro klávesnici a myš)
+- stanovíme nějakou podmnožinu, v rámci které bude frontend backendu rozkazovat jak má mečem pohnout
+
 
 
 \section{Shrnutí}
