--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -30,7 +30,7 @@
 
 @software{Wiedzmin3,
   author = {{CD Projekt RED}},
-  title = {Wiedzmin 3: Dziki Gon},
+  title = {Zaklínač 3: Divoký Hon},
   url = {https://www.thewitcher.com/witcher3/},
   date = {2015-05-18},
 }
