--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -133,21 +133,13 @@ Zaklínačská Znamení do boje přinášejí další vrstvu komplexity. Jde o \
 
 Výčet Znamení je pevně stanoven, avšak klasicky pro žánr RPG, hra zahrnuje \textbf{prvky progrese}, pomocí kterých lze Znamení v průběhu hry vylepšovat a modifikovat. Stejné platí i pro boj s mečem - rychlý i silný úder mají každý své vlastní stromy dovedností, které jsou schopny zajímavými způsoby ovlivnit gameplay. 
 
-Posledním prvkem, který zmíníme, jsou lektvary a oleje. Jde o \textbf{konzumovatelné předměty}, které hráč v průběhu hry sám vyrábí, a po jejich konzumaci (požití lektvaru postavou / namazání oleje na meč) hráč získá na určitý časový limit nějaký bonus (př. regenerace zdraví, bonusové zranění proti upírům apod.). Jde tedy o zdroje, se kterými hráč hospodaří v dlouhodobějším horizontu, ale použity v kritickém okamžiku mohou zvrátit výsledek boje. 
+Posledním prvkem, který zmíníme, jsou lektvary a oleje. Jde o \textbf{konzumovatelné předměty}, které hráč v průběhu hry sám vyrábí, a po jejich konzumaci (požití lektvaru postavou / namazání oleje na meč) mu je na určitý časový limit poskytnut nějaký bonus (př. regenerace zdraví, bonusové zranění proti upírům apod.). Jde tedy o zdroje, se kterými hráč hospodaří v dlouhodobějším horizontu, ale použity v kritickém okamžiku mohou zvrátit výsledek boje. 
 
 \bigbreak
 
+Vidíme, že bojový systém Zaklínače 3 je zjevně postaven kolem kostry, kterou jsme si načrtli v předchozí kapitole, zároveň jde o systém mající značnou hloubku. Hráči poskytuje prostor k budování dovednosti a k důmyslnému taktizování jak v krátkodobém, tak v dlouhodobém horizontu. Jeho kvality ostatně potvrzuje značný komerční úspěch, kterého se hře po vydání dostalo.
 
-
-%- musí být schopen bojovat proti humanoidům i libovolně obrovským a pitvorným monstrům
-%- z nějakého důvodu tu je blokování mečem, i když má smysl jenom proti lidem, na monstra neplatí
-%- kuš dává zanedbatelný dmg ale srazí letícího protivníka na zem kde ho po určitý čas lze dorazit
-%- silný X rychlý úder - faktor časování (ofc. je tu taky průraznost zbroje apod.)
-%- jak se vlastnosti úderů meče mění v závislosti na skill-tree progressu
-%- Znamení čerpají výdrž, pohyb inhibuje regeneraci výdrže
-%- toxicita - omezení kolik lektvarů může být použito během 1 boje
-%- lektvary, oleje apod. - dlouhodobé plánování
-
+Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že \textbf{hloubka je zde volitelná}. Rekreační hráč, který hraje převážně kvůli příběhu, si ji může dovolit víceméně ignorovat. Stačí hru nastavit na nízkou obtížnost a většinu nepřátel není těžké udolat pouze s povrchní znalostí základních mechanik. Není odvážné tvrdit, že to může mít pozitivní vliv na velikost cílového hráčského publika. 
 
 \subsection{Chladná zbraň jako doplňkový prvek}
 
