--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -35,6 +35,20 @@
   date = {2015-05-18},
 }
 
+@software{DOOM1993,
+  author = {{id Software}},
+  title = {DOOM},
+  url = {https://github.com/id-Software/DOOM},
+  date = {1993-12-10},
+}
+@software{HalfLife,
+  author = {{Valve Corporation}},
+  title = {Half Life},
+  url = {https://store.steampowered.com/app/70/HalfLife/},
+  date = {1998-11-19},
+}
+
+
 
 @article{AustralopithecusWeapon,
   author          = {Minkoff, Eli C.},
