--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -139,12 +139,18 @@ Posledním prvkem, který zmíníme, jsou lektvary a oleje. Jde o \textbf{konzum
 
 Vidíme, že bojový systém Zaklínače 3 je zjevně postaven kolem kostry, kterou jsme si načrtli v předchozí kapitole, zároveň jde o systém mající značnou hloubku. Hráči poskytuje prostor k budování dovednosti a k důmyslnému taktizování jak v krátkodobém, tak v dlouhodobém horizontu. Jeho kvality ostatně potvrzuje značný komerční úspěch, kterého se hře po vydání dostalo.
 
-Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že \textbf{hloubka je zde volitelná}. Rekreační hráč, který hraje převážně kvůli příběhu, si ji může dovolit víceméně ignorovat. Stačí hru nastavit na nízkou obtížnost a většinu nepřátel není těžké udolat pouze s povrchní znalostí základních mechanik. Není odvážné tvrdit, že to může mít pozitivní vliv na velikost cílového hráčského publika. 
+Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že \textbf{hloubka systému je volitelná}. Rekreační hráč, který hraje převážně kvůli příběhu, si ji může dovolit víceméně ignorovat. Stačí hru nastavit na nízkou obtížnost a většinu nepřátel není těžké udolat pouze s povrchní znalostí základních mechanik. Není odvážné tvrdit, že to může mít pozitivní vliv na velikost cílového hráčského publika. 
 
 \subsection{Chladná zbraň jako doplňkový prvek}
 
-- najdeme v mnoha fps, stealth apod. hrách (průkopník motorovka v DOOMovi 1993)
-- často je to demonstrace basic klik->útok varianty z 1.2.1(př. Half-Life, Borderlands, Dishonored (tam jsou prvky blokování a časování, trefování komponent clockwork soldiera - actually celkem propracovaná mechanika ale pořád to není stěžejní mechanika v porovnání se stealthem, střelné zbraně jsou s ní alespoň na rovinu (záleží PlayYourWay))), občas doplněná jedním dvěma prvky pro prohloubení, ale může to být i něco extra specielního (př. motorovka v DOOM Eternal)
+Chladnou zbraň najdeme také v mnoha hrách, ve kterých není stěžejním prvkem. Například ve většině her žánru \textbf{\acs{FPS}} najdeme kromě širokého výběru palných zbraní i nějaký nůž jako poslední zálohu když dojde munice, v žánru \textbf{stealth} často vidíme chladnou zbraň jako prostředek k tiché likvidaci nepřátel a takto bychom mohli pokračovat. Mnohdy taková zbraň odpovídá popisu z 1.2.1 - cílem není, aby chladná zbraň sama o sobě byla zajímavou mechanikou, naopak tvoří pouze jeden dílek ve skládačce herního systému a pro hráče musí být jednoduše uchopitelná. 
+
+Přesto najdeme mnoho takových zbraní, které se staly ikonickým symbolem své hry - zmínit můžeme například hru DOOM \cite{DOOM1993} a motorovou pilu, či páčidlo ze série Half-Life \cite{HalfLife}.
+
+
+
+%- najdeme v mnoha fps, stealth apod. hrách (průkopník motorovka v DOOMovi 1993)
+%- často je to demonstrace basic klik->útok varianty z 1.2.1(př. Half-Life, Borderlands, Dishonored (tam jsou prvky blokování a časování, trefování komponent clockwork soldiera - actually celkem propracovaná mechanika ale pořád to není stěžejní mechanika v porovnání se stealthem, střelné zbraně jsou s ní alespoň na rovinu (záleží PlayYourWay))), občas doplněná jedním dvěma prvky pro prohloubení, ale může to být i něco extra specielního (př. motorovka v DOOM Eternal)
 
 
 \section{Hry s větší kontrolou}
