minor addition to 1.2.2

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -137,7 +137,9 @@ Posledním prvkem, který zmíníme, jsou lektvary a oleje. Jde o \textbf{konzum
 
 \bigbreak
 
-Vidíme, že bojový systém Zaklínače 3 je zjevně postaven kolem kostry, kterou jsme si načrtli v předchozí kapitole, zároveň jde o systém mající značnou hloubku. Hráči poskytuje prostor k budování dovednosti a k důmyslnému taktizování jak v krátkodobém, tak v dlouhodobém horizontu. Jeho kvality ostatně potvrzuje značný komerční úspěch, kterého se hře po vydání dostalo.
+Vidíme, že bojový systém Zaklínače 3 je zjevně postaven kolem kostry, kterou jsme si načrtli v předchozí kapitole, zároveň jde o systém mající značnou hloubku. Tato hloubka je získána z velké části důrazem na celkový hráčův přehled o situaci na bojišti, škálou osobitých nepřátel, důrazem na časování, a pak také propojením s dalšími systémy - pohybem, magií a vařením lektvarů. 
+
+Hráči je poskytnut prostor k budování dovednosti a k důmyslnému taktizování jak v krátkodobém, tak v dlouhodobém horizontu. Celkové kvality bojového systému ostatně potvrzuje značný komerční úspěch, kterého se hře po vydání dostalo.
 
 Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že \textbf{hloubka systému je volitelná}. Rekreační hráč, který hraje převážně kvůli příběhu, si ji může dovolit víceméně ignorovat. Stačí hru nastavit na nízkou obtížnost a většinu nepřátel není těžké udolat pouze s povrchní znalostí základních mechanik. Není odvážné tvrdit, že to může mít pozitivní vliv na velikost cílového hráčského publika. 
 
