another addition to 1.2.2

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -133,7 +133,9 @@ Zaklínačská Znamení do boje přinášejí další vrstvu komplexity. Jde o \
 
 Výčet Znamení je pevně stanoven, avšak klasicky pro žánr RPG, hra zahrnuje \textbf{prvky progrese}, pomocí kterých lze Znamení v průběhu hry vylepšovat a modifikovat. Stejné platí i pro boj s mečem - rychlý i silný úder mají každý své vlastní stromy dovedností, které jsou schopny zajímavými způsoby ovlivnit gameplay. 
 
-Posledním prvkem, který zmíníme, jsou lektvary a oleje. Jde o \textbf{konzumovatelné předměty}, které hráč v průběhu hry sám vyrábí, a po jejich konzumaci (požití lektvaru postavou / namazání oleje na meč) mu je na určitý časový limit poskytnut nějaký bonus (př. regenerace zdraví, bonusové zranění proti upírům apod.). Jde tedy o zdroje, se kterými hráč hospodaří v dlouhodobějším horizontu, ale použity v kritickém okamžiku mohou zvrátit výsledek boje. 
+Poslední částí zaklínačova repertoáru, kterou zmíníme, jsou lektvary a oleje. Jde o \textbf{konzumovatelné předměty}, které hráč v průběhu hry sám vyrábí, a po jejich konzumaci (požití lektvaru postavou / namazání oleje na meč) mu je na určitý časový limit poskytnut nějaký bonus (př. regenerace zdraví, bonusové zranění proti upírům apod.). Jde tedy o zdroje, se kterými hráč hospodaří v dlouhodobějším horizontu, ale použity v kritickém okamžiku mohou zvrátit výsledek boje. 
+
+Esenciální součástí každé hry s bojovými prvky, jsou také \textbf{nepřátelé}. V této oblasti byl Zaklínač 3 k hráči velmi štědrý. Najdeme zde obyčejné lidské nepřátele (bandity, nepřátelské vojáky apod.), jejichž způsob boje sdílí mnoho prvků se zaklínačovým - např. jsou schopni blokovat jeho údery. Dále pak širokou paletu monster všech velikostí a tvarů, pozemní i schopné létat vzduchem, vybuchující, duchy zranitelné pouze specifickými cestami, tvory vládnoucí magií - každý nepřítel má své osobité silné a slabé stránky a vybízí hráče k jinému stylu hraní.
 
 \bigbreak
 
@@ -148,11 +150,6 @@ Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že 
 Chladnou zbraň najdeme také v mnoha hrách, ve kterých není stěžejním prvkem. Například ve většině her žánru \textbf{\acs{FPS}} najdeme kromě širokého výběru palných zbraní i nějaký nůž jako poslední zálohu když dojde munice, v žánru \textbf{stealth} často vidíme chladnou zbraň jako prostředek k tiché likvidaci nepřátel a takto bychom mohli pokračovat. Mnohdy taková zbraň odpovídá popisu z 1.2.1 - cílem není, aby chladná zbraň sama o sobě byla zajímavou mechanikou, naopak tvoří pouze jeden dílek ve skládačce herního systému a pro hráče musí být jednoduše uchopitelná. 
 
 Přesto najdeme mnoho takových zbraní, které se staly ikonickým symbolem své hry - zmínit můžeme například hru DOOM \cite{DOOM1993} a motorovou pilu, či páčidlo ze série Half-Life \cite{HalfLife}.
-
-
-
-%- najdeme v mnoha fps, stealth apod. hrách (průkopník motorovka v DOOMovi 1993)
-%- často je to demonstrace basic klik->útok varianty z 1.2.1(př. Half-Life, Borderlands, Dishonored (tam jsou prvky blokování a časování, trefování komponent clockwork soldiera - actually celkem propracovaná mechanika ale pořád to není stěžejní mechanika v porovnání se stealthem, střelné zbraně jsou s ní alespoň na rovinu (záleží PlayYourWay))), občas doplněná jedním dvěma prvky pro prohloubení, ale může to být i něco extra specielního (př. motorovka v DOOM Eternal)
 
 
 \section{Hry s větší kontrolou}
