added few more tips to ch.2

--- a/cs/kap02.tex
+++ b/cs/kap02.tex
@@ -3,8 +3,14 @@
 
 \section{Herní engine Unity}
 
+(představení herního enginu Unity)
+- že je na malý projekty zadarmo, ale není opensource a přístup ke zdrojáku je dost těžký získat
+- všestranný (2D i 3D), existuje už celkem dost dlouho - je tam dost kostrbatostí kvůli zpětné kompatibilitě, věci se dají dělat hodně různýma způsobama
+- podporované platformy
+
 (zákl. úvod)
 - struktura projektu: modely, textury, C\# skripty
+- použitá verze C\# a .NET runtime
 
 (model gameobjectů a herních komponent)
 - builtin VS custom MonoBehavior
