--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -154,21 +154,25 @@ Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symb
 
 \section{Hry s větší kontrolou}
 
-Nyní víme, jakým způsobem je typicky chladná zbraň v akčních hrách ztvárňována, známe pozitiva, která tento způsob přináší, a rovněž některé triky, jak touto cestou dosáhnout poutavého bojového systému. Co nás ale čeká, kdybychom chtěli sejít z vyšlapané cesty a nabídnout hráči větší míru kontroly nad jeho zbraní?
+Nyní víme, jakým způsobem je typicky chladná zbraň v akčních hrách ztvárňována, známe pozitiva, která tato cesta přináší, a rovněž některé triky, jak jejím prostřednictvím dosáhnout poutavého bojového systému. Co nás ale čeká, kdybychom chtěli sejít z vyšlapané cesty a nabídnout hráči větší míru kontroly nad jeho zbraní?
 
-Neprve se zamysleme, proč by hráč o větší kontrolu měl mít zájem:
+Neprve se zamysleme, proč by hráč o větší kontrolu mohl mít zájem:
 \begin{itemize}
-    \item fdsfds
+    \item \textbf{Je to poučné} - Jedním z hlavních cílů videoher celkově je zprostředkování zážitku, který je pro hráče z různých důvodů nedosažitelný v reálném světě. Skrze hru, která mu zprostředkuje přímou kontrolu nad mečem, může hráč získat větší pochopení k problematice historického vedení boje.
+    \item \textbf{Šerm ho baví v reálném světě} - Naopak, hráč může být aktivním šermířem, avšak chce si zážitek z boje užít ve zjednodušené podobě i v pohodlí domova.
+    \item \textbf{Nemá rád když ho hra omezuje} - Nemalá skupina hráčů si ráda hledá vlastní cestu hrou a vyžaduje od hry plnou svobodu v tom, co jim je umožněno dělat. 
+    \item \textbf{Chce zkusit něco nového} - Mnoho hráčů se již zkrátka nudí z donekonečna omýlaného klišé, jakým se boj s chladnou zbraní stal - líbí se jim téma, ale zároveň ho chtějí zkusit pojaté neotřelým způsobem.
 \end{itemize}
 
+Dále, jaké benefity by takový přístup mohl přinést tvůrci hry:
+\begin{itemize}
+    \item \textbf{Emergentní gameplay} - 
+    \item \textbf{Nástroj interakce s okolním prostředím} - 
+\end{itemize}
+
+Vidíme, že motivace k umožnění větší kontroly je silně nezanedbatelná. Očividně tedy takovým tendencím musí stát v cestě výrazné překážky vzhledem k tomu, že víme, že se jim dosud nepodařilo ovládnout herní mainstream.
 
 \clearpage
-(proč by hráč měl chtít větší kontrolu)
-- je to poučné o reálném světě
-- baví ho dělat blbosti, prostě chce mít kontrolu 
-- (může mít trauma ze hry kde postava udělala blbost co nechtěl)?
-- baví ho šermovat IRL
-
 (proč by vývojář měl chtít větší kontrolu pro hráče)
 - emergentní herní mechaniky
 - interakce s env., velmi diegetické GUI
