--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -154,7 +154,7 @@ Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symb
 
 \section{Hry s větší kontrolou}
 
-Nyní víme, jakým způsobem je typicky chladná zbraň v akčních hrách ztvárňována, známe pozitiva, která tato cesta přináší, a rovněž některé triky, jak jejím prostřednictvím dosáhnout poutavého bojového systému. Co nás ale čeká, kdybychom chtěli sejít z vyšlapané cesty a nabídnout hráči větší míru kontroly nad jeho zbraní?
+Nyní víme, jakým způsobem je typicky chladná zbraň v akčních hrách ztvárňována, známe pozitiva, která tato cesta přináší, a rovněž některé triky, jak jejím prostřednictvím dosáhnout poutavého bojového systému. Co nás ale čeká, kdybychom chtěli sejít z vyšlapané cesty a nabídnout hráči nad jeho zbraní větší míru kontroly?
 
 Neprve se zamysleme, proč by hráč o větší kontrolu mohl mít zájem:
 \begin{itemize}
@@ -166,16 +166,15 @@ Neprve se zamysleme, proč by hráč o větší kontrolu mohl mít zájem:
 
 Dále, jaké benefity by takový přístup mohl přinést tvůrci hry:
 \begin{itemize}
-    \item \textbf{Emergentní gameplay} - 
-    \item \textbf{Nástroj interakce s okolním prostředím} - 
+    \item \textbf{Emergentní gameplay} - Tvůrci hry stačí, aby zprovoznil robustní systém, který hráči umožní obecný pohyb meče. Najít zajímavou metodiku jak systém použít, je již úkolem hráčské komunity. Takto může dojít k živelnému objevení mechanik, které tvůrce hry nikdy ani neplánoval, čímž hra může být značně obohacena.  
+    \item \textbf{Nástroj interakce s okolním prostředím} - Pohybem meče v 3D prostoru se dá zprostředkovat široká škála interakcí s okolním prostředím, které by jinak musely být implementovány odděleně (zmíníme např. mačkání tlačítek či páčení víka truhlice). Také se tím otevírá cesta pro zcela nové interakce, které se s použitím meče jeví přirozené, bez něj by však bylo těžké najít cestu, jak je do hry zakomponovat (např. odrážení střel, srážení hledí protivníkovy přilby, odpalování předmětů na protivníka apod) .   
 \end{itemize}
 
 Vidíme, že motivace k umožnění větší kontroly je silně nezanedbatelná. Očividně tedy takovým tendencím musí stát v cestě výrazné překážky vzhledem k tomu, že víme, že se jim dosud nepodařilo ovládnout herní mainstream.
 
+
+
 \clearpage
-(proč by vývojář měl chtít větší kontrolu pro hráče)
-- emergentní herní mechaniky
-- interakce s env., velmi diegetické GUI
 
 (Problémy co je při tom potřeba vyřešit)
 - narativní disonance (pc má být zkušený šermíř)
